--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "colors": "1.4.0",
     "dot-wild": "^3.0.1",
     "dotenv": "^16.0.1",
+    "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "ioredis": "^5.0.4",
     "knex": "^3.0.1",
@@ -48,40 +49,10 @@
     "uuid": "^8.3.2",
     "yargs": "^17.5.1"
   },
-  "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.18.10",
-    "@babel/plugin-proposal-export-namespace-from": "^7.16.7",
-    "@babel/plugin-proposal-function-sent": "^7.18.6",
-    "@babel/plugin-proposal-numeric-separator": "^7.16.7",
-    "@babel/plugin-proposal-throw-expressions": "^7.16.7",
-    "@babel/plugin-transform-object-assign": "^7.16.7",
-    "@babel/preset-env": "^7.18.2",
-    "@types/bull": "^3.15.9",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^18.7.6",
-    "@types/pusher-js": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "body-parser": "^1.20.0",
-    "eslint": "^8.6.0",
-    "express": "^4.18.2",
-    "jest": "^26.6.3",
-    "jest-circus": "^26.6.3",
-    "pusher-js": "^7.1.1-beta",
-    "tcp-port-used": "^1.0.2",
-    "ts-jest": "^26.5.6",
-    "tslib": "^2.3.1"
-  },
-  "scripts": {
-    "lint": "eslint --ext .js,.ts ./src",
-    "test": "jest --detectOpenHandles --forceExit --silent",
-    "test:local": "jest --detectOpenHandles --forceExit --verbose",
-    "test:watch": "npm test -- --watch"
-  },
+  "scripts": {},
   "bin": {
-    "soketi": "bin/server.js",
-    "soketi-pm2": "bin/pm2.js"
+    "express-soketi": "bin/server.js",
+    "express-soketi-pm2": "bin/pm2.js"
   },
   "peerDependencies": {
     "@pm2/agent": "^2.0.3"
